# Agri-Mitra

./: design.md  requirements.md
Agrimitra-Gov-Website/backend/: config.env  package-lock.json  package.json
Agrimitra-Gov-Website/backend/config/: firebase.js
Agrimitra-Gov-Website/backend/src/: server.js
Agrimitra-Gov-Website/frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
Agrimitra-Gov-Website/frontend/src/: App.jsx  i18n.js  index.css  main.jsx
Agrimitra-Gov-Website/frontend/src/components/: DashboardCharts.jsx  (+6 more)
Agrimitra-Gov-Website/frontend/styles/: globals.css
Disease-Detection-Model/: fast_efficient_results.json
Disease-Detection-Model/app/api/: main.py  recommendations.json
Hardware/: README.md
Hardware/Doc/: ESP32 Pin Connections.md
Hardware/ESP32_firmware/: Bill of Materials.xlsx
Hardware/ESP32_firmware/NPKsensor/: NPKsensor.ino
ML-Models/Crop-Recommendation-Model/: README.md  app.py  crop_model_training.py  crop_prediction.py  requirements.txt
ML-Models/Yield-Prediction-Model/: label_encoder_crop.pkl  label_encoder_soil.pkl  model.pkl  model.py
NLP Model/: PageKnowledgeBase.json  agriformer (1).py
Rice-Model-Detection/Rice-Model-Detection/: app_fixed.py  model_info.json  render.yaml  requirements.txt
Rice-Model-Detection/Rice-Model-Detection/templates/: index.html
pest-detect-dep/: Procfile  README_Pest_Detection.md  filtered_pest_model_info.json  pest_app.py  pyproject.toml  requirements.txt
pest-detect-dep/templates/: classes_info.html  index.html  test_pest.html
(+32 files in other folders)
